fix hero text alignment add card shadow

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -2,7 +2,7 @@
   column-gap: 16px;
   grid-template-columns: repeat(2,minmax(0,1fr));
   width: 100%;
-  height: 100%;
+  height: 528px;
   display: grid;
 }
 
@@ -25,9 +25,10 @@
 }
 
 .cards-child {
-  position:relative;
+  position: relative;
   overflow: hidden;
   border-radius: 5px;
+  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
 }
 
 .cards-show {
@@ -66,6 +67,7 @@
 
 .cards-child > p {
   height: 100%;
+  position: absolute;
   margin: 0;
   transition: opacity 0.2s;
 }
@@ -84,7 +86,6 @@
 .cards-child > picture > img {
   height: 100%;
   transition: all 0.2s;
-  object-fit: cover;
 }
 
 .cards-child > picture > img:hover {
